--- a/app/src/main/res/layout/subscriber_fragment.xml
+++ b/app/src/main/res/layout/subscriber_fragment.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:padding="16dp"
     tools:context=".ui.subscriber.SubscriberFragment">
 
@@ -41,6 +43,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        android:id="@+id/button_subscriber"
         android:text="@string/subscriber_button"
         android:layout_marginTop="16dp"
         android:layout_width="0dp"
