--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,8 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph.xml"
-    app:startDestination="@id/subscriberFragment">
+    app:startDestination="@id/subscriberListFragment">
 
+    <fragment
+        android:id="@+id/subscriberListFragment"
+        android:name="com.ipsoft.mysubscribersapp.ui.subscriberlist.SubscriberListFragment"
+        android:label="subscriber_list_fragment"
+        tools:layout="@layout/subscriber_list_fragment" />
     <fragment
         android:id="@+id/subscriberFragment"
         android:name="com.ipsoft.mysubscribersapp.ui.subscriber.SubscriberFragment"
