Adicionada navegação da SubscriberListFragment.kt para SubscriberFragment.kt

--- a/app/src/main/res/layout/subscriber_list_fragment.xml
+++ b/app/src/main/res/layout/subscriber_list_fragment.xml
@@ -14,6 +14,7 @@
      tools:listitem="@layout/subscriber_item"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddSubscriber"
         android:layout_width="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
